# research-agents

./: README.md  pyproject.toml
src/academic_researcher/: cli.py
src/academic_researcher/agents/: base_agent.py  paper_retreiver.py  prompt_processor.py  summarizer.py
src/academic_researcher/core/: logging.py
src/academic_researcher/models/: schemas.py
src/academic_researcher/workflow/: research_workflow.py
